# GiantFish

./: .gitignore  README.md  TheWorldsShortestRomanceNovel.txt  pyproject.toml  wip_twsrn.py
data/final/: twsrn.txt
scripts/: demo_karplus_reverb.py  import_assets.py  make_ir.py  named_assets.py  pling.py  preprocess_file.py  score.py  sketch_01.py  speech_trio.py  test_import_assets.py  test_pkg.py  uke_test.py
src/giantfish/: cli.py  config.py
